--- a/src/app/inventario_module/crear-producto/crear-producto.component.html
+++ b/src/app/inventario_module/crear-producto/crear-producto.component.html
@@ -174,7 +174,9 @@
       </div>
     </div>
 
-    <div class="flex items-center justify-center gap-5 flex-wrap">
+    @if (productoId == null) {
+
+      <div class="flex items-center justify-center gap-5 flex-wrap">
       <button
         type="submit"
         class="mb-4 mt-20 inline-block w-auto text-center min-w-[200px] px-6 py-4 text-white transition-all rounded-md shadow-xl sm:w-auto bg-gradient-to-r from-blue-600 to-blue-500 hover:bg-gradient-to-b dark:shadow-blue-900 shadow-blue-200 hover:shadow-2xl hover:shadow-blue-400 hover:-tranneutral-y-px"
@@ -182,8 +184,11 @@
         AGREGAR PRODUCTO
       </button>
     </div>
+    }
+    
 
-    <div class="flex items-center justify-center gap-5 flex-wrap">
+    @if (productoId) {
+      <div class="flex items-center justify-center gap-5 flex-wrap">
       <button
         type="button"
         (click)="onUpdate()"
@@ -192,6 +197,9 @@
         EDITAR
       </button>
     </div>
+    }
+
+    
     @if (isUploading) {
       <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     }
