create modulo de colaboradores

--- a/src/app/colaboradores/lista-vendedores/lista-vendedores.component.html
+++ b/src/app/colaboradores/lista-vendedores/lista-vendedores.component.html
@@ -3,6 +3,7 @@
       <div class="flex  ">
         <button
         type="button"
+        (click)="navegarPuntodeVenta()"
         class="border-2 border-gray-700 flex h-14  items-center justify-between px-6 py-2 text-sm font-semibold text-white bg-green-500  shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
       >
         <mat-icon>add</mat-icon>
@@ -10,7 +11,7 @@
       </button>
         <button
         type="button"
-        (click)="navegarVendedores()"
+        
         class="border-2 border-gray-700 flex h-14  items-center justify-between px-6 py-2 text-sm font-semibold text-white bg-green-500  shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
       >
         <mat-icon>add</mat-icon>
@@ -28,37 +29,12 @@
   
       <button
         type="button"
-        (click)="navegar()"
+        (click)="agregarVendedor()"
         class="flex min-h-14  items-center justify-between px-4 py-2 text-sm font-semibold text-white bg-blue-500 rounded-lg shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
       >
         <mat-icon>add</mat-icon>
-        <span class="ml-2">Agregar punto de venta</span>
+        <span class="ml-2">AGREGAR NUEVO COLABORADOR</span>
       </button>
     </div>
 
     <div class="flex flex-wrap gap-6 p-6">
-
-        
-        @for (item of puntosDeVenta; track $index) {
-
-            <mat-card class="w-[300px]" appearance="outlined">
-                <mat-card-header>
-                  <mat-card-title>{{item.razonSocial}}</mat-card-title>
-                  <mat-card-subtitle>{{item.correo}}</mat-card-subtitle>
-                </mat-card-header>
-                <img mat-card-image [src]='item.imagen || mock' alt="Photo of a Shiba Inu">
-                
-                <mat-card-actions class="flex justify-between">
-                  <button (click)="verDetalles(item.id)" mat-button>MAS iNFORMACION</button>
-                  <button mat-button>EDITAR </button>
-                </mat-card-actions>
-              </mat-card>
-    
-            
-        }
-
-    </div>
-
-
-
-</div>
