--- a/src/app/reportes/reportes-clientes/reportes-clientes.component.html
+++ b/src/app/reportes/reportes-clientes/reportes-clientes.component.html
@@ -1,1 +1,72 @@
-<p>Yo ya estoy</p>
+<div class="shadow-md sm:rounded-lg w-full border-2 border-gray-700 dark:border-gray-700">
+  <div class="flex justify-between items-center p-6 bg-gray-800 dark:bg-gray-800 border-b dark:border-gray-700">
+    <h2 class="text-lg font-semibold text-white dark:text-white">Reporte</h2>
+
+    <input
+      type="text"
+      class="w-1/3 px-3 py-2 text-sm text-gray-300 placeholder-gray-500 border-2 border-gray-700 rounded-lg focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 focus:ring-offset-gray-800"
+      placeholder="Buscar..."
+    />
+
+  </div>
+
+  <table class="w-full m-auto text-sm text-left rtl:text-right text-gray-300 dark:text-gray-400">
+    <thead class="text-xs text-gray-300 uppercase bg-gray-700 dark:bg-gray-700 dark:text-gray-400">
+    <tr>
+      <th scope="col" class="px-6 py-3">-</th>
+      <th scope="col" class="px-6 py-3">NOMBRE</th>
+      <th scope="col" class="px-6 py-3">APELLIDO</th>
+      <th scope="col" class="px-6 py-3">DISTRITO</th>
+      <th scope="col" class="px-6 py-3">DNI</th>
+      <th scope="col" class="px-6 py-3">MARCA</th>
+      <th scope="col" class="px-6 py-3">MODELO</th>
+      <th scope="col" class="px-6 py-3">VENDEDOR</th>
+      <th scope="col" class="px-6 py-3">PLAN</th>
+      <th scope="col" class="px-6 py-3">PUNTO DE VENTA</th>
+
+    </tr>
+    </thead>
+    <tbody>
+      @for (item of clientesAnalises; track $index) {
+        <tr class="bg-gray-800 border-b dark:border-gray-700 hover:bg-gray-700 dark:hover:bg-gray-600">
+          <td class="p-1 shadow-md">-</td>
+          <td class="px-6 py-4 font-semibold text-white shadow-md">{{item.formTitular?.nombre}}</td>
+          <td class="px-6 py-4 font-semibold text-white shadow-md">{{item.formTitular?.apellido}}</td>
+          <td class="px-6 py-4 font-semibold text-white shadow-md">{{item.formTitular?.distrito}}</td>
+          <td class="px-6 py-4 font-semibold text-white shadow-md">{{item.formTitular?.documentNumber}}</td>
+          <td class="px-6 py-4 shadow-md"><span class="text-sm font-semibold text-white">{{item.formularioVehiculo?.marcaVehiculo}}</span></td>
+          <td class="px-6 py-4 shadow-md"><span class="text-sm font-semibold text-white">{{item.formularioVehiculo?.modeloVehiculo}}</span></td>
+          <td class="px-6 py-4 shadow-md"><span class="text-sm font-semibold text-white">{{item.formularioVehiculo?.nombreDelVendedor}}</span></td>
+          <td class="px-6 py-4 shadow-md"><span class="text-sm font-semibold text-white">{{item.formularioVehiculo?.numeroQuincenas}}</span></td>
+          <td class="px-6 py-4 shadow-md"><span class="text-sm font-semibold text-white">{{item.formularioVehiculo?.puntoDeVenta}}</span></td>
+        </tr>
+      }
+    </tbody>
+  </table>
+
+
+
+  <table class="w-full m-auto text-sm text-left rtl:text-right text-gray-300 dark:text-gray-400">
+      <thead class="text-xs text-gray-300 uppercase bg-gray-700 dark:bg-gray-700 dark:text-gray-400">
+      <tr class="bg-gray-700">
+        <th class="px-4 py-2">Punto de Venta</th>
+        <th class="px-4 py-2">Marca</th>
+        <th class="px-4 py-2">Modelo</th>
+        <th class="px-4 py-2">Ventas</th>
+      </tr>
+      </thead>
+      <tbody>
+        @for (item of modeloMasVendidoArray; track item.modelo) {
+          <tr class="bg-gray-800 border-b dark:border-gray-700 hover:bg-gray-700 dark:hover:bg-gray-600">
+            <td class="px-4 py-2">{{ item.puntoventa }}</td>
+            <td class="px-4 py-2">{{ item.marca }}</td>
+            <td class="px-4 py-2">{{ item.modelo }}</td>
+            <td class="px-4 py-2">{{ item.cantidad }}</td>
+          </tr>
+        }
+      </tbody>
+    </table>
+
+</div>
+
+
