implemetacion de creacion de aliado comercial

--- a/src/app/colaboradores/crear-colaboradores/crear-colaboradores.component.html
+++ b/src/app/colaboradores/crear-colaboradores/crear-colaboradores.component.html
@@ -39,6 +39,11 @@
                 </mat-form-field>
 
                 <mat-form-field>
+                    <mat-label>CONTRASEÑA</mat-label>
+                    <input matInput formControlName="contrasena" />
+                </mat-form-field>
+
+                <mat-form-field>
                     <mat-label>CORREO ELECTRONICO</mat-label>
                     <input matInput formControlName="correo" />
                 </mat-form-field>
