--- a/src/app/colaboradores/lista-vendedores/lista-vendedores.component.html
+++ b/src/app/colaboradores/lista-vendedores/lista-vendedores.component.html
@@ -94,7 +94,7 @@
         
 
         <td class="px-3 py-4 font-semibold text-white shadow-md">
-          {{ item.correo}}
+          {{ item.direccion}}
         </td>
 
         <td class="px-3 py-4 shadow-md">
