completar configuracion web

--- a/src/app/web_config_module/front-config/front-config.component.html
+++ b/src/app/web_config_module/front-config/front-config.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-center items-center text-slate-100">
+<div class="flex flex-col justify-center items-center text-slate-100 bg-cyan-950" >
   <div>
     <h2 class="font-bold text-2xl text-center">CONFIGURACION DE LA PAGINA</h2>
   </div>
@@ -9,131 +9,332 @@
         CARRUCEL DE IMAGENES PAGINA PRINCIPAL
       </h2>
 
-
       <div>
-        <span> <p> IMagenes existentes Actualemente </p></span>
-        <div class=" border p-4 container flex gap-7 justify-center items-center flex-wrap">
-
-
+        <span> <p>IMagenes existentes Actualemente</p></span>
+        <div
+          class="border p-4 container flex gap-7 justify-center items-center flex-wrap"
+        >
           @for (item of slides; track $index) {
 
-            <button (click)="openModal(item.id)" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-                <div class="w-80 flex flex-col gap-3 justify-center items-center" >
-                <img [src]="item.inicio" alt="" />
-                <mat-icon>delete</mat-icon>
-                </div>
-            </button>
+          <button
+            (click)="openModal(item.id)"
+            class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            type="button"
+          >
+            <div class="w-80 flex flex-col gap-3 justify-center items-center">
+              <img [src]="item.inicio" alt="" />
+              <mat-icon>delete</mat-icon>
+            </div>
+          </button>
           }
-
         </div>
 
         <h2>agregar imagenes al carrucel del main</h2>
 
         <div>
-
-            <div
-        class="rounded-md border border-indigo-500 bg-gray-50 p-4 shadow-md flex justify-between gap-5"
-      >
-        <div
-          class="rounded-md border border-indigo-500 bg-gray-50 p-4 shadow-md w-36"
-        >
-          <label
-            for="upload"
-            class="flex flex-col items-center gap-2 cursor-pointer"
+          <div
+            class="rounded-md border border-indigo-500 bg-gray-50 p-4 shadow-md flex justify-between gap-5"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="h-10 w-10 fill-white stroke-indigo-500"
-              viewBox="0 0 24 24"
-              stroke="currentColor"
-              stroke-width="2"
+            <div
+              class="rounded-md border border-indigo-500 bg-gray-50 p-4 shadow-md w-36"
             >
-              <path
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+              <label
+                for="upload"
+                class="flex flex-col items-center gap-2 cursor-pointer"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-10 w-10 fill-white stroke-indigo-500"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+                  />
+                </svg>
+                <span class="text-gray-600 font-medium">Img principal</span>
+                <span class="text-gray-600 font-medium"
+                  >procurar menos de 1 mb
+                </span>
+              </label>
+              <input
+                id="upload"
+                type="file"
+                class="hidden"
+                (change)="onImageSelected($event)"
               />
-            </svg>
-            <span class="text-gray-600 font-medium">Img principal</span>
-            <span class="text-gray-600 font-medium"
-              >procurar menos de 1 mb
-            </span>
-          </label>
-          <input
-            id="upload"
-            type="file"
-            class="hidden"
-            (change)="onImageSelected($event)"
-          />
-        </div>
+            </div>
 
-        @if (imagenPrincipal != null && imagenPrincipal != null && imagenPrincipal != '') {
-        <div
-          (click)="removeImageprincipal()"
-          class="rounded-md border border-indigo-500 bg-gray-50 h-36 shadow-md w-36"
-        >
-          <img
-            [src]="imagenPrincipal"
-            alt=" "
-            class="object-cover w-full h-full overflow-hidden rounded-md"
-          />
-        </div>
-        }
+            @if (imagenPrincipal != null && imagenPrincipal != null &&
+            imagenPrincipal != '') {
+            <div
+              (click)="removeImageprincipal()"
+              class="rounded-md border border-indigo-500 bg-gray-50 h-36 shadow-md w-36"
+            >
+              <img
+                [src]="imagenPrincipal"
+                alt=" "
+                class="object-cover w-full h-full overflow-hidden rounded-md"
+              />
+            </div>
+            }
 
-       <button (click)="guardarImagenDelCarrucel()" data-modal-hide="popup-modal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-        <mat-icon>save</mat-icon>
-Guardar Ahora
-</button>
-
+            <button
+              (click)="guardarImagenDelCarrucel()"
+              data-modal-hide="popup-modal"
+              type="button"
+              class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+            >
+              <mat-icon>save</mat-icon>
+              Guardar Ahora
+            </button>
+          </div>
         </div>
-        </div>
-
 
         <!------------------------------------------------------------>
-
       </div>
 
-      <div>
+      <div></div>
+    </div>
+  </section>
 
-
-      </div>
+  <section class="mb-6">
+    <div>
+      <h2>BANERS DE LA PAGINA PRINCIPAL</h2>
     </div>
 
-   
-  </section>
-  <div>
-    <h2>BANERS DE LA PAGINA PRINCIPAL</h2>
-  </div>
+    <div
+      class="border p-4 container flex gap-7 justify-center items-center flex-wrap"
+    >
+      @for (item of baners; track $index) {
 
-  <section></section>
+      <button
+        (click)="openModalBaner(item.id)"
+        class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        type="button"
+      >
+        <div class="w-80 flex flex-col gap-3 justify-center items-center">
+          <img [src]="item.baner" alt="" />
+          <p>{{ item.id }}</p>
+          <mat-icon>delete</mat-icon>
+        </div>
+      </button>
+      }
+    </div>
+
+    <!--  aqui es otra parte del componte  -->
+
+    <h2>agregar baners publicitarios</h2>
+
+    <div
+      class="rounded-md border border-indigo-500 bg-gray-50 p-4 shadow-md flex justify-between gap-5"
+    >
+      <div
+        class="rounded-md border border-indigo-500 bg-gray-50 p-4 shadow-md w-36"
+      >
+        <label
+          for="upload2"
+          class="flex flex-col items-center gap-2 cursor-pointer"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-10 w-10 fill-white stroke-indigo-500"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+            />
+          </svg>
+          <span class="text-gray-600 font-medium">Img principal</span>
+          <span class="text-gray-600 font-medium">baner menos de 1 mb </span>
+        </label>
+        <input
+          id="upload2"
+          type="file"
+          class="hidden"
+          (change)="onBanerSelected($event)"
+        />
+      </div>
+
+      @if (banerPrincipal != null && banerPrincipal != '') {
+      <div
+        (click)="removeBanerPrincipal()"
+        class="rounded-md border border-indigo-500 bg-gray-50 h-36 shadow-md w-36"
+      >
+        <img
+          [src]="banerPrincipal"
+          alt=" "
+          class="object-cover w-full h-full overflow-hidden rounded-md"
+        />
+      </div>
+      }
+
+      <button
+        (click)="guardarBanerPublicitario()"
+        data-modal-hide="popup-modal"
+        type="button"
+        class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+      >
+        <mat-icon>save</mat-icon>
+        Guardar Ahora
+      </button>
+    </div>
+  </section>
 </div>
+
+
+
+<!---      mdales    -->
 
 @if(modalOpen) {
 
-    <div id="popup-modal" tabindex="-1" class="fixed inset-0 z-50 flex items-center justify-center overflow-y-auto overflow-x-hidden p-4 bg-black bg-opacity-75">
-        <div class="relative p-4 w-full max-w-md max-h-full">
-            <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
-                <button (click)="cerrarModal()" type="button" class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="popup-modal">
-                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                </button>
-                <div class="p-4 md:p-5 text-center">
-                    <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"/>
-                    </svg>
-                    <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">Estas seguro de eliminar la imagen</h3>
-                    <button (click)="Borrarslide()" data-modal-hide="popup-modal" type="button" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
-                        Si , Estoy seguro
-                    </button>
-                    <button (click)="cerrarModal()" data-modal-hide="popup-modal" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancelar</button>
-                </div>
-            </div>
-        </div>
+<div
+  id="popup-modal"
+  tabindex="-1"
+  class="fixed inset-0 z-50 flex items-center justify-center overflow-y-auto overflow-x-hidden p-4 bg-black bg-opacity-75"
+>
+  <div class="relative p-4 w-full max-w-md max-h-full">
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <button
+        (click)="cerrarModal()"
+        type="button"
+        class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        data-modal-hide="popup-modal"
+      >
+        <svg
+          class="w-3 h-3"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 14 14"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+          />
+        </svg>
+        <span class="sr-only">Close modal</span>
+      </button>
+      <div class="p-4 md:p-5 text-center">
+        <svg
+          class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 20 20"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+          />
+        </svg>
+        <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">
+          Estas seguro de eliminar la imagen
+        </h3>
+        <button
+          (click)="Borrarslide()"
+          data-modal-hide="popup-modal"
+          type="button"
+          class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center"
+        >
+          Si , Estoy seguro
+        </button>
+        <button
+          (click)="cerrarModal()"
+          data-modal-hide="popup-modal"
+          type="button"
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+        >
+          No, cancelar
+        </button>
+      </div>
     </div>
+  </div>
+</div>
 
+} @if(modalOpenBaner) {
+
+<div
+  id="popup-modal"
+  tabindex="-1"
+  class="fixed inset-0 z-50 flex items-center justify-center overflow-y-auto overflow-x-hidden p-4 bg-black bg-opacity-75"
+>
+  <div class="relative p-4 w-full max-w-md max-h-full">
+    <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+      <button
+        (click)="cerrarModalBaner()"
+        type="button"
+        class="absolute top-3 end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        data-modal-hide="popup-modal"
+      >
+        <svg
+          class="w-3 h-3"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 14 14"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+          />
+        </svg>
+        <span class="sr-only">Close modal</span>
+      </button>
+      <div class="p-4 md:p-5 text-center">
+        <svg
+          class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 20 20"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
+          />
+        </svg>
+        <h3 class="mb-5 text-lg font-normal text-gray-500 dark:text-gray-400">
+          Estas seguro de eliminar la imagen
+        </h3>
+        <button
+          (click)="BorrarBaner()"
+          data-modal-hide="popup-modal"
+          type="button"
+          class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center"
+        >
+          Si , Estoy seguro
+        </button>
+        <button
+          (click)="cerrarModalBaner()"
+          data-modal-hide="popup-modal"
+          type="button"
+          class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+        >
+          No, cancelar
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
 
 }
-
-
