--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,53 +1,3 @@
-<div class="h-screen w-full bg-white relative flex overflow-hidden">
-  <!-- Sidebar -->
-  <aside
-    class="h-full w-16 flex flex-col space-y-10 items-center justify-center relative bg-gray-800 text-white"
-  >
-    @for (item of menu_principal; track $index) {
-    <!-- Profile -->
-    <div
-      (click)="navegar(item.route)"
-      matTooltip="{{ item.name }}"
-      matTooltipPosition="right"
-      class="h-10 w-10 flex items-center justify-center rounded-lg cursor-pointer hover:text-gray-800 hover:bg-white hover:duration-300 hover:ease-linear focus:bg-white"
-    >
-      <mat-icon>{{ item.icon }}</mat-icon>
-    </div>
-    }
-  </aside>
-
-  <div class="w-full h-full flex flex-col justify-between">
-    <!-- Header -->
-    <header
-      class="h-16 w-full flex items-center relative justify-end px-5 space-x-10 bg-gray-800"
-    >
-      <!-- Informação -->
-      <div class="flex flex-shrink-0 items-center space-x-4 text-white">
-        <!-- Texto -->
-        <div class="flex flex-col items-end">
-          <!-- Nome -->
-          <div class="text-md font-medium">Lizana</div>
-          <!-- Título -->
-          <div class="text-sm font-regular">Administrador</div>
-        </div>
-
-        <!-- Foto -->
-        <div
-          class="h-10 w-10 rounded-full cursor-pointer bg-gray-200 border-2 border-blue-400"
-        ></div>
-      </div>
-    </header>
-
-    <!-- cuerpo principal  -->
-    <main class="max-w-full h-full flex relative overflow-y-hidden">
-      <!-- Container -->
-      <div class="w-full m-4 rounded-tl bg-gray-100 overflow-y-scroll">
-        <!-- Container -->
-
-        <div [ngClass]="fadeState" class="w-full h-full  bg-gray-800">
-          <router-outlet (activate)="onActivate()"></router-outlet>
-        </div>
-      </div>
-    </main>
-  </div>
+<div [ngClass]="fadeState" class="w-full h-full bg-gray-800">
+  <router-outlet ></router-outlet>
 </div>
