--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div [ngClass]="fadeState" class="w-full h-full bg-gray-800">
+  <div class="version-box">
+  Versión {{ appVersion }}
+</div>
   <router-outlet ></router-outlet>
 </div>
